[package]
name = "laboratory"
description = "A simple, expressive unit test framework for Rust"
version = "1.3.0"
authors = ["Joshua Enokson <kilograhm@pm.me>"]
edition = "2018"
keywords = ["test", "tests", "unit", "spec", "debug"]
categories = [
  "development-tools::testing",
  "development-tools::debugging",
  "development-tools::profiling",
]
repository = "https://github.com/enokson/laboratory"
homepage = "https://github.com/enokson/laboratory"
license = "MIT"

[workspace]
members = [
  "crates/test-helpers",
  "crates/veritas",
  "crates/spectrum",
  "crates/spectrum-macros",
]

#publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.1"
console = "0.13.0"
serde = { version = "1.0.116", features = ["derive"] }
serde_json = "1.0.59"
type-map = "0.3.0"
indexmap = "1.6.0"
derefable = "0.1.0"
derive-new = "0.5.8"
humantime = "2.0.1"
getset = "0.1.1"
veritas = { path = "./crates/veritas" }

[dev-dependencies]
pretty_assertions = "0.6.1"
difference = "2.0.0"
term = "0.6.1"
ansi_term = "0.12.1"
laboratory-test-helpers = { path = "./crates/test-helpers" }
spectrum-macros = { path = "./crates/spectrum-macros" }
spectrum = { path = "./crates/spectrum" }
trybuild = { version = "1.0.35", features = ["diff"] }

[build-dependencies]
handlebars = "3.5.1"
glob = "0.3.0"
serde_json = "*"
serde = { version = "1.0.116", features = ["derive"] }
