[package]
name = "spectrum-macros"
version = "0.0.0"
authors = ["Yehuda Katz <wycats@gmail.com>"]
edition = "2018"
description = "Macros for interacting with spectrum ergonomically. Under heavy development, and doesn't work yet"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0.48", features = ["full", "extra-traits"] }
quote = "1.0.7"
spectrum = { version = "0.0.0", path = "../spectrum" }
proc-macro2 = "1.0.24"
proc-macro-error = "1.0.4"
tt-call = "1.0.7"
derive-new = "0.5.8"

[build-dependencies]
rustc_version = "0.3.0"
