[package]
name = "spectrum"
version = "0.0.0"
authors = ["Yehuda Katz <wycats@gmail.com>"]
edition = "2018"
description = "A library for building structured, colorful output. Under heavy development, and doesn't work yet"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive-new = "0.5.8"
indexmap = "1.6.0"
console = "0.13.0"
itertools = "0.9.0"
format = "0.2.3"
pretty = "0.10.0"
arrayvec = "0.5.2"
lazy_static = "1.4.0"

[dev-dependencies]
textwrap = "0.12.1"
