[package]
name = "styled"
version = "0.1.0"
authors = ["Yehuda Katz <wycats@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive-new = "0.5.8"
indexmap = "1.6.0"
console = "0.13.0"
itertools = "0.9.0"
format = "0.2.3"
